# swifft

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: tests.yml
benches/: compress.rs
examples/: naive.rs
src/: backend.rs  core.rs  field_element.rs  lib.rs  math.rs  pattern.rs  state.rs  test_support.rs
