[package]
name = "swifft"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "PoC Rust implementation of the SWIFFT hash function"
readme = "README.md"
repository = "https://github.com/cyberbono3/swifft"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "hash", "swifft"]
categories = ["cryptography"]

[features]
default = ["std"]
std = []
# Reserved feature flags for future optimizations/parallelism.
parallel = []
simd = []

[dependencies]



[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
